--- a/bot/package.json
+++ b/bot/package.json
@@ -29,7 +29,6 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
-    "@types/webextension-polyfill": "^0.10.2",
     "autoprefixer": "^10.4.15",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -39,7 +38,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
-    "typescript": "~5.1.3",
-    "webextension-polyfill": "^0.10.0"
+    "typescript": "~5.1.3"
   }
 }
