Update: Bot name

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bot Do IT Big v2",
+  "name": "Automation Challenge Bot",
   "version": "1.0.0",
   "manifest_version": 3,
   "permissions": ["activeTab", "scripting"],
